cmake_minimum_required(VERSION 3.10)

project(cmake_1)

add_executable(add_1 

main.cpp

EquilateralTriangle.cpp
EquilateralTriangle.h

Figure.cpp
Figure.h
IsoscelesTriangle.cpp

Parallelogram.cpp
Parallelogram.h

Quadrangle.cpp
Quadrangle.h

Rectangle.cpp
Rectangle.h

Rhombus.cpp
Rhombus.h

RightTriangle.cpp
RightTriangle.h

Square.cpp
Square.h

Triangle.cpp
Triangle.h
)